ModalContainer close z-index fix

--- a/bundle/components/ModalContainer/styles/_base.scss
+++ b/bundle/components/ModalContainer/styles/_base.scss
@@ -33,6 +33,8 @@
 }
 
 .nwc-modal-children {
+  position: relative;
+  z-index: 0;
   display: inline-block;
   overflow: auto;
   width: 100%;
